--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,13 +7,8 @@ logging:
     org.springframework: warn
 
 spring:
-  thymeleaf:
-    cache: false
-    prefix: classpath:/templates/
-    suffix: .html
-    encoding: UTF-8
-    content-type: text/html
-    mode: HTML5
+  application:
+    name: hdBlog
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -74,6 +69,12 @@ spring:
     host: 101.133.158.168 #redis的主机ip
     port: 6379
     password: 220352
+
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+        enabled: true
 
 mybatis-plus:
   mapper-locations: classpath*:mybatis/**/*.xml
